# j-lens

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: gpt2_demo.yaml  qwen05b_mps.yaml  qwen_intervene.yaml
docs/superpowers/plans/: 2026-07-15-lens-showdown.md
docs/superpowers/specs/: 2026-07-08-jlenskit-design.md  2026-07-14-lens-showdown-design.md
examples/: quickstart.ipynb  sample_viz.html
jlenskit/: __init__.py  baselines.py  cli.py  config.py  models.py  showdown.py
jlenskit/adapters/: __init__.py  base.py  registry.py  spec.py
jlenskit/baselines/: __init__.py  logit.py  tuned.py
jlenskit/core/: __init__.py  jacobian.py  lens.py  lens_base.py  types.py
jlenskit/data/: __init__.py  probes.py  sample_corpus.txt
jlenskit/data/probes/: core_v1.json
jlenskit/jspace/: __init__.py
jlenskit/metrics/: __init__.py
jlenskit/store/: __init__.py  cache.py  hashing.py  manifest.py  results.py
jlenskit/viz/: __init__.py  showdown.py
tests/: conftest.py  test_adapters.py  test_baselines.py  test_cli.py  test_core.py  test_jspace.py  test_lens_base.py  test_metrics.py  test_probes.py  test_showdown.py  test_store.py  test_tuned.py  test_viz.py
tests/parity/: test_parity.py
