[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jlenskit"
version = "0.1.0"
description = "A reproducible, modular toolkit for running the Jacobian lens (J-lens) on open-weights language models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "jlenskit contributors" }]
keywords = ["interpretability", "jacobian-lens", "mechanistic-interpretability", "transformers", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2",
    "transformers>=4.44",
    "safetensors>=0.4",
    "numpy>=1.24",
    "pydantic>=2.5",
    "pyarrow>=14",
    "typer>=0.12",
    "pyyaml>=6.0",
    "huggingface_hub>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
parity = ["jlens"]  # anthropics/jacobian-lens; used only by tests/parity

[project.scripts]
jlenskit = "jlenskit.cli:app"

[project.urls]
Homepage = "https://github.com/jlenskit/jlenskit"
Paper = "https://transformer-circuits.pub/2026/workspace/index.html"
Reference = "https://github.com/anthropics/jacobian-lens"

[tool.hatch.build.targets.wheel]
packages = ["jlenskit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E741: single-letter `l` is idiomatic for layer index here; B905: zip strict= noise.
ignore = ["E501", "E741", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
